--- a/uimodule/webapp/manifest.json
+++ b/uimodule/webapp/manifest.json
@@ -23,6 +23,15 @@
           "icon": "sap-icon://add"
         }
       }
+    },
+    "dataSources": {
+      "V2NorthwindNorthwind.svc": {
+        "uri": "V2/Northwind/Northwind.svc",
+        "type": "OData",
+        "settings": {
+          "localUri": "localService/V2/Northwind/Northwind.svc/metadata.xml"
+        }
+      }
     }
   },
   "sap.ui": {
@@ -60,6 +69,16 @@
         "settings": {
           "bundleName": "tutorial.products.i18n.i18n"
         }
+      },
+      "": {
+        "type": "sap.ui.model.odata.v2.ODataModel",
+        "settings": {
+          "defaultOperationMode": "Server",
+          "defaultBindingMode": "TwoWay",
+          "defaultCountMode": "Inline",
+          "preload": true
+        },
+        "dataSource": "V2NorthwindNorthwind.svc"
       }
     },
     "resources": {
@@ -86,6 +105,20 @@
           "target": [
             "TargetMainView"
           ]
+        },
+        {
+          "name": "Products",
+          "pattern": "",
+          "target": [
+            "TargetProducts"
+          ]
+        },
+        {
+          "name": "ProductDetail",
+          "pattern": "Product/{productId}",
+          "target": [
+            "TargetProductDetail"
+          ]
         }
       ],
       "targets": {
@@ -95,6 +128,16 @@
           "clearControlAggregation": false,
           "viewId": "MainView",
           "viewName": "MainView"
+        },
+        "TargetProducts": {
+          "viewType": "XML",
+          "viewId": "Products",
+          "viewName": "Products"
+        },
+        "TargetProductDetail": {
+          "viewType": "XML",
+          "viewId": "ProductDetail",
+          "viewName": "ProductDetail"
         }
       }
     },
